<resources>
    <string name="app_name">Погода</string>

    <string name="showWindText">Показывать сведения о ветре</string>
    <string name="showPressureText">Показывать сведения о давлении</string>
    <string name="showHumidityText">Показывать сведения о влажности</string>
    <string name="cities">Погода в городе</string>
    <string name="actionTheme">Настройки</string>
    <string name="actionAbout">О программе</string>
    <string name="actionAddCity">Добавить город</string>
    <string name="aboutText">v 1.0</string>
    <string name="author">© Павлович Денис</string>
    <string name="inputCityName">Введите название города</string>
    <string name="yes">Да</string>
    <string name="no">Отмена</string>
    <string name="delete">Удаление</string>
    <string name="confirmDelete">Вы действительно ходите удалить %s?</string>
    <string name="favoriteWeather">Погода в любимом городе</string>
    <string name="channelName">О погоде</string>
    <string name="favoriteCity">Любимый город:</string>

    <string name="temperature">"Температура:"</string>
    <string name="precipitation">"Осадки           :"</string>
    <string name="wind">"Ветер              :"</string>
    <string name="humidity">"Влажность    :"</string>
    <string name="pressure">"Давление      :"</string>
    <string name="title_activity_wsettings">Настройки</string>
    <string name="lightTeme">Светлая тема</string>
    <string name="darkTheme">Темная тема</string>
    <string name="sendToFriend">Отправить другу</string>
    <string name="noViewApp">Нет приложения с помощью которого можно отправить сообщение!</string>
    <string name="space">" "</string>
    <string name="lookWetherInInternet">Подробнее</string>
    <string name="action_share">Поделиться</string>
    <string name="currTemperatureTemplate">Температура: %s%s</string>
    <string name="currHumidityTemplate">Влажность: %s%s</string>
    <string name="emptyWData">Нет данных о погоде</string>
    <string name="pressureUnit">мм рт. ст.</string>
    <string name="speedUnit">м/с</string>
    <string name="windNo">""</string>
    <string name="windSouthEast">юго-вост.</string>
    <string name="windSouth">южный</string>
    <string name="windSouthWest">юго-зап.</string>
    <string name="windWest">западный</string>
    <string name="windNorthWest">северо-зап.</string>
    <string name="windNorth">северный</string>
    <string name="windNorthEast">северо-вост.</string>
    <string name="windEast">восточный</string>

    <string name="navigation_drawer_open">Открыть навигацию</string>
    <string name="navigation_drawer_close">Закрыть навигацию</string>
</resources>
