<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/checks"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cityName"
        style="@style/infoCities"
        android:text="@string/cities" />

    <LinearLayout
        android:id="@+id/temperatureView"
        style="@style/infoWeatherParams">

        <TextView
            android:id="@+id/temperatureText"
            style="@style/infoWeatherParameter"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/temperatureValue"
            style="@style/infoWeatherValue"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/windView"
        style="@style/infoWeatherParams">

        <TextView
            android:id="@+id/windText"
            style="@style/infoWeatherParameter"
            android:text="@string/wind" />

        <TextView
            android:id="@+id/windValue"
            style="@style/infoWeatherValue"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pressureView"
        style="@style/infoWeatherParams">

        <TextView
            android:id="@+id/pressureText"
            style="@style/infoWeatherParameter"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/pressureValue"
            style="@style/infoWeatherValue"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/humidityView"
        style="@style/infoWeatherParams">

        <TextView
            android:id="@+id/humidityText"
            style="@style/infoWeatherParameter"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/humidityValue"
            style="@style/infoWeatherValue"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/precipitationView"
        style="@style/infoWeatherParams">

        <TextView
            android:id="@+id/precipitationText"
            style="@style/infoWeatherParameter"
            android:text="@string/precipitation" />

        <TextView
            android:id="@+id/precipitationValue"
            style="@style/infoWeatherValue"
            android:text="" />
    </LinearLayout>

    <FrameLayout style="@style/frameButtonStyle">

        <android.support.design.button.MaterialButton
            android:id="@+id/lookWeatherInInternet"
            style="@style/buttonStyle.D.D2"
            android:text="@string/lookWetherInInternet" />

    </FrameLayout>


</LinearLayout>



