<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WActivityInfo">

    <LinearLayout
        android:id="@+id/checks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cityName"
            android:text="@string/cities"
            style="@style/infoCities" />

        <LinearLayout
            android:id="@+id/temperatureView"
            style="@style/infoWeatherParams">

            <TextView
                android:id="@+id/temperatureText"
                android:text="@string/temperature"
                style="@style/infoWeatherParameter" />

            <TextView
                android:id="@+id/temperatureValue"
                android:text=""
                style="@style/infoWeatherValue" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/windView"
            style="@style/infoWeatherParams">

            <TextView
                android:id="@+id/windText"
                android:text="@string/wind"
                style="@style/infoWeatherParameter" />

            <TextView
                android:id="@+id/windValue"
                android:text=""
                style="@style/infoWeatherValue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pressureView"
            style="@style/infoWeatherParams">

            <TextView
                android:id="@+id/pressureText"
                android:text="@string/pressure"
                style="@style/infoWeatherParameter" />

            <TextView
                android:id="@+id/pressureValue"
                android:text=""
                style="@style/infoWeatherValue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/humidityView"
            style="@style/infoWeatherParams">

            <TextView
                android:id="@+id/humidityText"
                android:text="@string/humidity"
                style="@style/infoWeatherParameter" />

            <TextView
                android:id="@+id/humidityValue"
                android:text=""
                style="@style/infoWeatherValue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/precipitationView"
            style="@style/infoWeatherParams">

            <TextView
                android:id="@+id/precipitationText"
                android:text="@string/precipitation"
                style="@style/infoWeatherParameter" />

            <TextView
                android:id="@+id/precipitationValue"
                android:text=""
                style="@style/infoWeatherValue" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>