<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.WActivitySettings">


    <RadioGroup style="@style/settingsRadioGroup">

        <RadioButton
            android:id="@+id/lightTheme"
            style="@style/settingsRadioButton"
            android:checked="true"
            android:text="@string/lightTeme" />

        <RadioButton
            android:id="@+id/darkTheme"
            style="@style/settingsRadioButton"
            android:text="@string/darkTheme" />
    </RadioGroup>


    <TextView
        style="@style/spinnerItemStyle.D"
        android:text="@string/favoriteCity" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinnerCityList"
        style="@style/spinnerStyle" />

</LinearLayout>