<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WActivity">


    <LinearLayout
        android:id="@+id/checks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="4sp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4sp"
            android:checked="true"
            android:text="@string/showWindText" />

        <Switch
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4sp"
            android:checked="true"
            android:text="@string/showPressureText" />

        <Switch
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4sp"
            android:checked="true"
            android:text="@string/showHumidityText" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4sp"
            android:text="@string/cities"
            android:textSize="30sp" />

        <ListView
            android:id="@+id/cities"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</FrameLayout>